###############################################################################

plugin_srcs = files([
    'source/BinaryData.cpp',
    'source/Ebu128LoudnessMeter.cpp',
    'source/LUFSMeterAudioProcessor.cpp',
    'source/LUFSMeterAudioProcessorEditor.cpp',
    'source/filters/SecondOrderIIRFilter.cpp',
    'source/gui/AnimatedSidePanel.cpp',
    'source/gui/BackgroundGrid.cpp',
    'source/gui/BackgroundGridCaption.cpp',
    'source/gui/BackgroundVerticalLinesAndCaption.cpp',
    'source/gui/LoudnessBar.cpp',
    'source/gui/LoudnessBarRangeSlider.cpp',
    'source/gui/LoudnessHistory.cpp',
    'source/gui/LoudnessHistoryGroup.cpp',
    'source/gui/LoudnessNumeric.cpp',
    'source/gui/LoudnessRangeBar.cpp',
    'source/gui/LoudnessRangeHistory.cpp',
    'source/gui/MultiChannelLoudnessBar.cpp',
    'source/gui/PreferencesPane.cpp',
])

plugin_name = 'LUFSMeterMulti'
plugin_extra_build_flags = [
    '-DLUFS_MULTI=1',
]

###############################################################################
