###############################################################################

plugin_srcs = files([
    'source/AlgoDisplay.cpp',
    'source/BinaryData.cpp',
    'source/CartManager.cpp',
    'source/DXComponents.cpp',
    'source/DXLookNFeel.cpp',
    'source/EngineMkI.cpp',
    'source/EngineOpl.cpp',
    'source/GlobalEditor.cpp',
    'source/OperatorEditor.cpp',
    'source/ParamDialog.cpp',
    'source/PluginData.cpp',
    'source/PluginEditor.cpp',
    'source/PluginFx.cpp',
    'source/PluginParam.cpp',
    'source/PluginProcessor.cpp',
    'source/ProgramListBox.cpp',
    'source/SysexComm.cpp',
    'source/msfa/dx7note.cc',
    'source/msfa/env.cc',
    'source/msfa/exp2.cc',
    'source/msfa/fm_core.cc',
    'source/msfa/fm_op_kernel.cc',
    'source/msfa/freqlut.cc',
    'source/msfa/lfo.cc',
    'source/msfa/pitchenv.cc',
    'source/msfa/sin.cc',
])

plugin_name = 'Dexed'
plugin_uses_devices = true
plugin_extra_build_flags = [
    '-DJUCE_MODULE_AVAILABLE_juce_audio_devices=1'
]

###############################################################################
